# auto-repo-config

./: .gitignore  .pre-commit-config.yaml  .repo-config.yaml  auto_repo_config.py  helpers.py  pyproject.toml  readme.md  setup.cfg  test_helpers.py
.github/workflows/: main.yml  run.yml  schedule.yml
auto_repo_config/: helpers.py  main.py
