[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-repo-config"
version = "0.1.0"
description = "Periodically run a GitHub Action to standardize certain settings across all repos."
authors = [{ name = "Janosh Riebesell", email = "janosh.riebesell@gmail.com" }]
license = { file = "license" }
keywords = ["action", "automatic", "configuration", "github", "repository"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.10"
dependencies = ["pyyaml", "requests"]
urls = { Homepage = "https://github.com/janosh/auto-repo-config" }

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
auto-repo-config = "auto_repo_config:main"

[tool.setuptools.packages]
find = {}

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
select = ["ALL"]
ignore = [
  "C408",   # Unnecessary dict call - rewrite as a literal
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # Missing docstring in magic method
  "D107",   # Missing docstring in __init__
  "D205",   # 1 blank line required between summary line and description
  "E731",   # Do not assign a lambda expression, use a def
  "EM",     # raw/f-string-in-exception
  "PTH",    # Prefer pathlib over os.path
  "S101",   # Use of assert detected
  "T201",   # print found
  "TRY003", # raise-vanilla-args
]
pydocstyle.convention = "google"

[tool.ruff.per-file-ignores]
# PLR2004 Magic value used in comparison
"test_*" = ["D", "PLR2004"]
