[metadata]
name = auto-repo-config
version = 0.1.0
description = Periodically run a GitHub Action to standardize certain settings across all repos.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/auto-repo-config
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_files = license
keywords = github, action, automatic, repository, configuration
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2.25.0
    pyyaml >= 5.4.0

[options.entry_points]
console_scripts =
    auto-repo-config = auto_repo_config.main:main

[flake8]
# Use black's default line length.
max-line-length = 88
max-complexity = 16
# E731: do not assign a lambda expression, use a def
# E203: whitespace before ':'
ignore = E731, E203

# Make isort play nicely with black's import formatting https://git.io/Jug0o.
[isort]
multi_line_output = 3
include_trailing_comma = True
lines_after_imports = 2

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
