[metadata]
name = auto-repo-config
version = 0.1.0
description = Periodically run a GitHub Action to standardize certain settings across all repos.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/auto-repo-config
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_files = license
keywords = github, action, automatic, repository, configuration
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
install_requires =
    requests
    pyyaml

[options.entry_points]
console_scripts =
    auto-repo-config = auto_repo_config:main

[flake8]
# Use black's default line length.
max-line-length = 88

[isort]
profile = black
lines_after_imports = 2

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
